<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.futebol.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timeA"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gols"
                android:textSize="16sp"
                android:textStyle="italic"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pontuacao_gols_a"
                android:text="0"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:paddingTop="1dp"
                android:paddingBottom="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faltas"
                android:textSize="16sp"
                android:textStyle="italic"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pontuacao_faltas_a"
                android:text="0"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:paddingTop="1dp"
                android:paddingBottom="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cartoes"
                android:textSize="16sp"
                android:textStyle="italic"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pontuacao_Cartoes_a"
                android:text="0"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:paddingTop="1dp"
                android:paddingBottom="16dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/marcarGol"
                android:onClick="marcarGolTimeA"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lançarFaltaSimples"
                android:onClick="lançarFaltaSimplesTimeA"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lançarFaltaCartao"
                android:onClick="lançarFaltaComCartaoTimeA"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timeB"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gols"
                android:textSize="16sp"
                android:textStyle="italic"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pontuacao_gols_b"
                android:text="0"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:paddingTop="1dp"
                android:paddingBottom="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faltas"
                android:textSize="16sp"
                android:textStyle="italic"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pontuacao_faltas_b"
                android:text="0"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:paddingTop="1dp"
                android:paddingBottom="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cartoes"
                android:textSize="16sp"
                android:textStyle="italic"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pontuacao_Cartoes_b"
                android:text="0"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:paddingTop="1dp"
                android:paddingBottom="16dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/marcarGol"
                android:onClick="marcarGolTimeB"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lançarFaltaSimples"
                android:onClick="lançarFaltaSimplesTimeB"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lançarFaltaCartao"
                android:onClick="lançarFaltaComCartaoTimeB"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reiniciar"
        android:text="@string/reiniciar"
        android:onClick="reiniciar"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"/>
</RelativeLayout>
